# story_graph

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  story_graph.html
data/: blindsight.txt  hp.txt  little_prince.txt
data/books/: hp.txt  quantico.txt
src/story_graph/: main.py  pipeline.py  progress.py
src/story_graph/aggregation/: character_registry.py  normalization.py  pipeline.py  relationships.py  sentiments.py
src/story_graph/chunking/: splitter.py
src/story_graph/extraction/: checkpoint.py  extractor.py  models.py  pipeline.py
src/story_graph/filtering/: character_filter.py
src/story_graph/graph/: builder.py  debug.py  relationship_groups.py  visualize.py
src/story_graph/ingest/: loader.py
src/story_graph/web/: __init__.py  __main__.py  app.py  jobs.py  models.py  ui.py
src/story_graph/web/static/: app.css  app.js
src/story_graph/web/templates/: index.html
tests/: test_pipeline_resume_and_temporal.py  test_web_app_and_core.py
