[project]
name = "story-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.6.1",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.68.0",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3.2",
    "spacy>=3.8.11",
    "starlette>=0.52.1",
    "uvicorn>=0.41.0",
]
[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]